--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ body {
     display: grid;
     grid-template: 100px 8fr 5fr 4fr 5fr 80px / repeat(6, 1fr);
   }
+
+  header, .banner, .about, footer {
+    grid-column-start: 1;
+    grid-column-end: 7;
+  }
   
   header {
   
