Refactored CSS using grid-column

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@ body {
   }
 
   header, .banner, .about, footer {
-    grid-column-start: 1;
-    grid-column-end: 7;
+    grid-column: 1 / span 6;
   }
   
   header {
