--- a/css/style.css
+++ b/css/style.css
@@ -98,11 +98,11 @@ body {
   }
   
   .one {
-  
+    grid-column: 1 / span 3;
   }
   
   .two {
-  
+    grid-column: 4 / span 3;
   }
   
   footer {
